add tests for AbstractModule and ModuleManager
also added annotations for abstract module that enable() and disable() super methods should be called in subclasses (if overriding)